# lg-deepresearch-agent

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  docker-entrypoint.sh  pyproject.toml  render.yaml  run_research.py
.github/: DEPLOYMENT.md
.github/workflows/: ci.yml  deploy-preview.yml  deploy-production.yml  deploy-staging.yml
docs/plans/: 2025-12-31-deep-research-agent-design.md  2025-12-31-deep-research-agent-implementation.md  2026-01-07-expandable-tool-thinking-log-design.md  2026-01-07-expandable-tool-thinking-log-implementation.md  2026-01-11-expandable-tool-thinking-log-design.md  2026-01-11-expandable-tool-thinking-log-implementation.md
frontend/: Dockerfile  Dockerfile.dev  package-lock.json  package.json  vitest.config.mts  vitest.config.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx  providers.tsx
frontend/src/contexts/: AgentActivityContext.test.tsx  AgentActivityContext.tsx  index.ts
frontend/src/hooks/: index.ts  useAgentActivity.test.ts  useAgentActivity.ts
prisma/: schema.prisma
scripts/: seed_test_user.py
src/: config.py  main.py
src/agent/: __init__.py  graph.py  prompts.py  state.py
src/agent/subagents/: __init__.py  (+1 more)
src/api/: __init__.py  agui_agent.py  copilotkit.py  research.py  routes.py  sessions.py
src/db/: __init__.py  client.py
src/models/: __init__.py  schemas.py
src/services/: __init__.py  auth.py  langfuse_callback.py  rate_limiter.py
tests/test_agent/: test_graph.py  test_state.py
tests/test_api/: test_copilotkit.py
tests/test_services/: test_auth.py
(+39 files in other folders)
