[project]
name = "lg-deepresearch-agent"
version = "0.1.0"
description = "Deep research agent using LangGraph deepagents framework"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # Agent framework
    "deepagents>=0.2.6",
    "langgraph>=0.2.0",

    # LLM
    "langchain-openai>=1.0.2",

    # API
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",

    # Database
    "prisma>=0.13.0",

    # Tools
    "tavily-python>=0.5.0",
    "e2b-code-interpreter>=1.0.0",
    "httpx>=0.28.0",
    "markdownify>=1.2.0",
    "pymupdf>=1.24.0",
    "python-docx>=1.1.0",
    "openpyxl>=3.1.0",

    # Observability
    "langfuse>=2.0.0",

    # Auth
    "python-jose[cryptography]>=3.3.0",

    # Utils
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.6.0",
    "mypy>=1.11.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true
disable_error_code = ["call-arg", "attr-defined", "no-any-return", "arg-type", "var-annotated", "return-value", "typeddict-item"]
